# ardopc

./: .gitignore
ardop1/: .gitignore  ALSASound.c  ARDOPC.c  ARDOPC.h  ARQ.c  HostInterface.c  KISSModule.c  LinSerial.c  Makefile  Modulate.c  SCSHostInterface.c  SoundInput.c  TCPHostInterface.c
ardop1ofdm/: ALSASound.c  ARDOPC.c  ARDOPC.h  ARQ.c  CMakeLists.txt  KISSModule.c  LinSerial.c  SCSHostInterface-HPLaptop.c  SCSHostInterface.c  SoundInput.c  Waveout.c  coreaudio.c
ardop2ofdm/: ALSASound.c  ARDOPC.c  ARDOPC.h  ARQ.c  HostInterface.c  SCSHostInterface.c  SoundInput.c  Version.h  Waveout.c
ardop_gui/: bootstrap.sh
